app/assets/stylesheets/css/components/ui/state.css
/* State Component - BEM: .state (block), .state__* (elements), .state--* (modifiers) */

/* Empty State Component */

.state {
  @apply mx-auto flex w-full max-w-72 flex-col items-center justify-center gap-3 rounded-lg bg-background p-6 text-center;
}

.state__illustration {
  @apply relative h-36 w-60 flex items-center justify-center;
}

.state__card {
  @apply absolute flex h-11 w-44 items-center gap-1.5 rounded-lg border border-secondary p-2.5;

  background: linear-gradient(194deg, var(--color-primary) 27%, var(--color-background) 65%);
  box-shadow: var(--box-shadow-card);
}

.state__card--top {
  @apply start-0 top-0;
}

.state__card--middle {
  @apply start-14 top-8;
}

.state__card--bottom {
  @apply start-5 top-20;
}

.state__badge {
  @apply flex size-6 shrink-0 items-center justify-center rounded-full text-xs font-medium leading-none text-content;

  background: color-mix(in oklab, var(--color-tertiary) 88%, var(--color-primary));
}

.state__body {
  @apply flex min-w-0 flex-1 flex-col gap-1;
}

.state__line {
  @apply block h-1.5 rounded-full;

  background: color-mix(in oklab, var(--color-tertiary) 78%, var(--color-primary));
}

.state__line--title {
  @apply opacity-75;
}

.state__line--large {
  @apply w-14;
}

.state__line--medium {
  @apply w-12;
}

.state__line--small {
  @apply w-11;
}

.state__line--content {
  @apply w-full;
}

.state__message {
  @apply text-base font-normal leading-6 text-content-secondary break-words whitespace-normal ;
}

/*  Frame Load Failed Component */
.state--frame-load-failed {
  @apply max-w-96 gap-1 min-w-0;
}

.state__document {
  @apply absolute flex h-28 w-20 flex-col rounded-lg border border-secondary p-0.5;

  background: linear-gradient(235deg, var(--color-primary) 27%, var(--color-background) 65%);
}

.state__document--start {
  @apply start-4 rotate-[-21deg];
}

.state__document--center {
  @apply start-16 z-10;
}

.state__document--end {
  @apply start-24 rotate-[21deg] z-0;
}

.state__document-body {
  @apply flex h-full w-full items-center rounded-lg p-2.5;

  box-shadow: var(--box-shadow-card);
}

.state__document-lines {
  @apply flex h-full w-full flex-col justify-between
}

.state__document-line {
  @apply block h-1 w-full rounded-full;

  background: color-mix(in oklab, var(--color-tertiary) 78%, var(--color-primary));
}

.state__document-line--short {
  @apply w-10;
}

.state__magnifier {
  @apply absolute start-[30%] top-[30%] z-20 bg-none;
}

.state__magnifier-icon {
  @apply size-24 text-content-secondary opacity-20;
}

.state__note {
  @apply text-center text-sm font-normal leading-5 text-content break-words whitespace-normal;
}

.state__link {
  color: color-mix(in oklab, var(--color-info-content), var(--color-content) 10%);
}

